# trasgu

./: .gitignore  LICENSE  README.md  chimera_tools.py  chimera_vines.py  combine_chunks_results.py  fit_in_geocean.py  geoocean.yaml  mkdocs.yml  pyproject.toml  run_fit_all_chunks.py  trasgu.py  vine_config.py
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: cloud-validation.yml  docs.yml  python-tests.yml
aux/: CreateSamples.py  generate_trasgu_zarr.py  get_matrices.py
docs/: cli-reference.md  codespaces.md  development.md  examples.md  getting-started.md  help-roadmap.md  index.md  installation.md  offline-zarr.md  outputs.md  run-configuration.md  slurm-hpc.md  troubleshooting.md  workflows.md
examples/controls/: controls_management.py  threads.py
examples/inputs/: input4_500_clayton_med.txt  input4_500_gauss_high.txt  input4_500_gauss_low.txt  input4_500_gauss_med.txt  input4_500_gumbel_high.txt  input5_100_clayton_med.txt  input5_100_gauss_high.txt  input5_100_gauss_low.txt  input6_100_clayton_med.txt  input6_100_gauss_low.txt  input6_500_clayton_low.txt  input7_100_gauss_low.txt  input7_500_clayton_med.txt  input7_500_gauss_med.txt  input7_500_gumbel_low.txt  input8_100_clayton_high.txt  input8_100_gauss_low.csv  input8_100_gauss_low.txt  input8_100_gauss_med.txt  input8_100_gumbel_low.txt  input8_100_gumbel_med.txt  input8_500_clayton_low.txt  input8_500_clayton_med.txt  input8_500_gumbel_high.txt  input8_500_gumbel_med.txt
examples/launchers/: launch_altamira.sh  launch_geoocean.sh  launch_unican.sh
examples/run_config/: altamira.yaml  geoocean.yaml  minimal.yaml  unican.yaml
examples/run_config/altamira/: trasgu.yaml
examples/run_config/big/: trasgu.yaml
examples/run_config/csv_columns/: trasgu.yaml
examples/run_config/custom_controls/: trasgu.yaml
examples/run_config/local_chimera/: trasgu.yaml
examples/run_config/minimal/: trasgu.yaml
examples/run_config/unican/: trasgu.yaml
examples/snakemake_profiles/: delftblue.yaml  snellius.yaml
inputs/: input4_100_gumbel_high.txt  input4_500_gumbel_low.txt  input4_500_gumbel_med.txt  input5_100_clayton_high.txt  input5_100_gumbel_low.txt  input5_500_clayton_high.txt  input5_500_clayton_low.txt  input5_500_clayton_med.txt  input5_500_gauss_low.txt  input6_100_gumbel_high.txt  input6_100_gumbel_low.txt  input6_500_clayton_high.txt  input6_500_clayton_med.txt  input6_500_gumbel_high.txt  input6_500_gumbel_low.txt  input6_500_gumbel_med.txt  input7_100_clayton_med.txt  input7_100_gumbel_high.txt  input7_100_gumbel_low.txt  input7_100_gumbel_med.txt  input7_500_clayton_high.txt  input7_500_gauss_high.txt  input8_100_clayton_low.txt  input8_500_gauss_high.txt  input8_500_gauss_low.txt
launchers/: launch_slurm.sh
scripts/: chimera_count_chunks.py  chimera_fit_all.py  chimera_fit_chunk.py  chimera_get_matrix.py  chimera_monitor.py  chimera_submit_slurm.py  chimera_time_fit.py  fit_reference_models.py  trasgu_combine.py  trasgu_count_chunks.py  trasgu_download_zarr.py  trasgu_fit_all.py  trasgu_fit_chunk.py  trasgu_get_matrix.py  trasgu_monitor.py  trasgu_run.py  trasgu_submit_slurm.py  trasgu_time_fit.py
scripts/chimera/: read_chimera_zarr_R.R  read_chimera_zarr_matlab.m
scripts/clayton_100_runs/: Snakefile  clayton_matrix.yaml  fit_dissmann.py  fit_reference_models.py  other_fits.py  simulate_100clayton_vines.py  trasgu.yaml
scripts/esrel/: Snakefile  aic_comparison.csv  fit_reference_models.py  simulate_100clayton_vines.py  trasgu.yaml
scripts/esrel/old_way/: manual_fit.py
scripts/parallel_test/: ship_wave.txt  time_fit_columns.sh
scripts/performance_tests/: benchmark_pyvinecopulib_threads.py  input4_300_gumbel_high.txt  input5_300_gumbel_high.txt  input6_300_gumbel_high.txt  input7_300_gumbel_high.txt  input8_300_gumbel_high.txt  plot_scaling_comparison.py
scripts/plots/: plot_aic_differences.py  plot_fit_times.py  plot_large_aic_cdf.py  preprocess_large_aic_cdf.py
scripts/repeticiones/6_gumble_high_300_T13/: aic_comparison.csv  simulate_vines.py  trasgu.yaml
scripts/scalability/: benchmark_pyvinecopulib_threads.py
scripts/ship_wake/: PrepareData.py  UI-1_ship_and_wake_data_for_TUDelft.csv  slurm_profile.yaml  trasgu.yaml
scripts/simulaciones7_altamira/analysis/: analyze_total_slurm_execution_time.py
scripts/template_n/: Snakefile  measure_correlations.py  select_best_vine.py  simulate.py  slurm_profile.yaml  trasgu.yaml  vinecop_samples.txt
src/trasgu/: __init__.py  chimera.py  core.py
src/trasgu/cli/: __init__.py  run.py  (+12 more)
tests/: test_chimera_tools.py  test_cli_help.py  test_lazy_loading.py  test_trasgu_best_fits.py  test_trasgu_download.py  test_trasgu_examples.py  test_trasgu_find_matrix.py  test_trasgu_get_matrix.py  test_trasgu_run.py  test_trasgu_tools.py  tests_config.yaml
trasgu_workflow/: Snakefile  __init__.py
yaml_examples/: example7vines.yaml  geoocean.yaml
(+60 files in other folders)
