[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[project]
name = "trasgu"
version = "0.1.0"
description = "Vine copula fitting over Chimera Zarr structures"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
  "numpy>=1.23",
  "PyYAML>=6.0",
  "zarr>=2.16",
  "fsspec[http]>=2023.6.0",
  "pyvinecopulib>=0.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.5",
  "black>=24.0",
]

[project.scripts]
trasgu_fit_all = "scripts.trasgu_fit_all:main"
trasgu_submit_slurm = "scripts.trasgu_submit_slurm:main"
trasgu_combine = "scripts.trasgu_combine:main"
trasgu_monitor = "scripts.trasgu_monitor:main"
trasgu_fit_chunk = "scripts.trasgu_fit_chunk:main"
trasgu_count_chunks = "scripts.trasgu_count_chunks:main"
trasgu_time_fit = "scripts.trasgu_time_fit:main"
trasgu_get_matrix = "scripts.trasgu_get_matrix:main"

[tool.setuptools]
packages = ["scripts"]
py-modules = ["trasgu"]
