[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "trasgu"
version = "0.1.0"
description = "Vine copula fitting over Chimera Zarr structures"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [
  { name = "Valvanuz Fernandez Quiruelas" },
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
  "numpy>=1.23",
  "PyYAML>=6.0",
  "zarr>=3.0,<3.2",
  "fsspec[http]>=2023.6.0",
  "pyvinecopulib>=0.6.0",
  "snakemake>=8",
]

[project.optional-dependencies]
slurm = [
  "snakemake-executor-plugin-slurm>=0.10",
]
dev = [
  "pytest>=7",
  "ruff>=0.5",
  "black>=24.0",
]

[dependency-groups]
dev = [
  "pytest>=7",
  "ruff>=0.5",
  "black>=24.0",
]

[project.scripts]
trasgu_combine = "trasgu.cli.combine:main"
trasgu_monitor = "trasgu.cli.monitor:main"
trasgu_fit_chunk = "trasgu.cli.fit_chunk:main"
trasgu_count_chunks = "trasgu.cli.count_chunks:main"
trasgu_time_fit = "trasgu.cli.time_fit:main"
trasgu_get_matrix = "trasgu.cli.get_matrix:main"
trasgu_run = "trasgu.cli.run:main"
trasgu_download_zarr = "trasgu.cli.download_zarr:main"
trasgu_examples = "trasgu.cli.examples:main"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"trasgu.workflow" = ["Snakefile", "profiles/slurm/config.yaml"]
"trasgu.examples" = [
  "*/*",
]

[tool.setuptools.exclude-package-data]
"trasgu.examples" = [
  "__pycache__/*",
  "*/*.pyc",
]

[tool.uv]
package = true
